--- a/snake/snake.css
+++ b/snake/snake.css
@@ -2,6 +2,7 @@
     background-color: black;
     font-size: 40px;
     color: white;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 canvas {
@@ -14,10 +15,28 @@ div {
     height: 400px;
     border: 5px solid;
     border-color: yellowgreen palevioletred;
-    padding: 1px;
+    padding: 5px;
 }
 
 aside {
     position: fixed;
     top: 0;
+    left: 50px;
+}
+
+input {
+    display: block;
+    width: 200px;
+    color: salmon;
+    margin: 40px 0;
+    padding: 14px 16px;
+    font-size: 40px;
+    line-height: 40px;
+    font-weight: 600;
+    border-radius: 10px;
+    background: #ffffff1a;
+}
+
+input:hover {
+    background: #ffffff;
 }
